--- a/log-center/src/main/resources/bootstrap.yml
+++ b/log-center/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: stock-day
+    name: log-center
   cloud:
     config:
       discovery:
@@ -14,7 +14,7 @@ spring:
     username: guest
     password: guest
 server:
-  port: 8892
+  port: 8895
 eureka:
   client:
     service-url:
