--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,11 @@
 		<module>gateway-center</module>
 		<module>api-common</module>
 		<module>stock-day</module>
-		<!--<module>cms-web</module>-->
-	</modules>
+		<module>socket-center</module>
+		<module>socket-center2</module>
+		<module>log-center</module>
+        <module>flinkSvr</module>
+    </modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
@@ -87,6 +90,11 @@
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid</artifactId>
 			<version>1.1.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.protobuf</groupId>
+			<artifactId>protobuf-java</artifactId>
+			<version>3.4.0</version>
 		</dependency>
 	</dependencies>
 
